--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tauri + Angular</title>
+    <title>Logic Designer</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="assets/logicdesigner.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@400;700&display=swap"
       rel="stylesheet"
